# tftpr

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  release.toml
.github/workflows/: ci.yml
docs/plans/completed/: 2026-03-06-cargo-dist-and-cargo-release.md  2026-03-06-zero-config-tftp-server.md
src/: handler.rs  log.rs  main.rs  packet.rs  server.rs
