[package]
name = "tftpr"
version = "1.0.0"
edition = "2024"
description = "a zero-config TFTP server"
license = "MIT"
repository = "https://github.com/yalexaner/tftpr"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "io-util", "fs", "time", "sync"] }
thiserror = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
